fix: hide top_circle__xl on mobile + move sp circles higher to clear button

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1561,10 +1561,10 @@ h3, .h3 {
   display: block;
   position: absolute;
   z-index: 2;
-  width: 104px;
-  height: 104px;
+  width: 88px;
+  height: 88px;
   left: 5%;
-  top: 52%;
+  top: 42%;
   bottom: auto;
   animation: float-a 6s ease-in-out infinite 1.1s;
 }
@@ -1572,10 +1572,10 @@ h3, .h3 {
   display: block;
   position: absolute;
   z-index: 2;
-  width: 80px;
-  height: 80px;
+  width: 72px;
+  height: 72px;
   right: 8%;
-  top: 38%;
+  top: 28%;
   bottom: auto;
   animation: float-c 4.8s ease-in-out infinite 1.7s;
 }
@@ -1621,13 +1621,7 @@ h3, .h3 {
 }
 
 .top_circle__xl {
-  width: 110px;
-  height: 110px;
-  right: 4px;
-  bottom: 38px;
-  top: auto;
-  left: auto;
-  overflow: hidden;
+  display: none;
 }
 .top_circle__xl .top_c-slide,
 .top_circle__xl img {
